playlist starts playing again when quitting VLC on Mac OS X
When quitting VLC in Mac OS X the playlist starts playback for an item in the playlist.
Steps to reproduce:
(1) Start VLC with a file (example, same issue with any other input)
VLC.app/Contents/MacOS/VLC -vvv /Users/username/Movies/podcast.mov
(2) don't play, play it but leave it in your playlist
(3) quit: hit CMD+Q or use the menu bar.
(4) Strange Behaviour: [0x7fe10b437c20] main playlist debug: starting playback of the new playlist item
Extract of error log:
[0x7fe10c15d540] macosx interface debug: Killing extension dialog provider
[0x7fe10b407150] main libvlc debug: exiting
[0x7fe10c15d540] main interface debug: using interface module "macosx"
[0x7fe10b437c20] main playlist debug: processing request item: null, node: Playlist, skip: 0
[0x7fe10b407150] main libvlc debug: removing all interfaces
[0x7fe10b437c20] main playlist debug: rebuilding array of current - root Playlist
[0x7fe10b407150] main libvlc debug: exiting
[0x7fe10b437c20] main playlist debug: rebuild done - 1 items, index -1
[0x7fe10c15d540] main interface debug: removing module "macosx"
[0x7fe10b437c20] main playlist debug: starting playback of the new playlist item
[0x7fe10b437c20] main playlist debug: resyncing on podcast.mov
[0x7fe10c15ce90] main interface debug: removing module "hotkeys"
[0x7fe10b437c20] main playlist debug: podcast.mov is at 0
[0x7fe10b437c20] main playlist debug: destroying
[0x7fe10b437c20] main playlist debug: creating new input thread
[0x7fe10c36d0f0] main input debug: Creating an input for 'podcast.mov'
Edited by Jean-Baptiste Kempf