bin/mac: do not start playlist while quitting VLC

close #8353